--- a/protected/modules/exercise/assets/css/main.css
+++ b/protected/modules/exercise/assets/css/main.css
@@ -1,31 +1,28 @@
 
-.logme-info{
+.exercise-info{
   margin: 5px 25px;
   float: left;
 }
-.logme-info b{
+.exercise-info b{
 	color: #8D49A9;
 	font-size: 18px;
 }
 
-.logme-info label{
+.exercise-info label{
 	color: #8D49A9;
 	padding: 0px;
 	margin:0px;
 }
-.logme-container{
-  float: left;
-  height: 150px;
-  width: 150px;
-  margin: 5px;
-  position: relative;
+.exercise-container{
+    margin: 5px;
+    padding: 5px;
+    position: relative;
 }
 .library-container{
   display:inline-block;
-  overflow: auto;
-  min-height: 150px;
+      width: 100%;
 }
-.logme-image{
+.exercise-image{
   height: 100px;
     width: 100px;
     margin-left: 25px;
@@ -33,7 +30,7 @@
     display: block;
     position: relative;
 }
-.logme-image img{
+.exercise-image img{
   height: 100px;
   width: 100px;
   margin-left:-50px;
@@ -41,19 +38,13 @@
   display: block;
   position: absolute;
 }
-.logme-username{
+.exercise-name{
   display: block;
-  word-wrap: break-word;
-  overflow: hidden;
   padding: 15px 10px;
-  height: 40px;
-  font-size: 14px;
-  text-align: center;
-  font-weight: bold;
 }
 
 
-.logme-icon{
+.exercise-icon{
   color:#fff;
   border-radius: 25px;
   border: 2px solid #898989;
@@ -77,7 +68,7 @@
   border-radius: 25px 25px 0 0;
 }
 
-.logme-btn{
+.exercise-btn{
   color:#fff;
   min-width: 100px;
   border-radius: 25px;
@@ -95,7 +86,7 @@ min-height: 100px;
 margin-left: 12px;
 font-size:25px;
 }
-.logme-optionin{
+.exercise-optionin{
   border-radius: 25px;
   border: 2px solid #890000;
   background: #890000;
@@ -104,7 +95,7 @@ font-size:25px;
  background: -moz-radial-gradient(#ed0000 45%, #890000 100%); /* For Firefox 3.6-15 */
  background: radial-gradient(#ed0000 20%, #890000 80%); /* Standard syntax */
 }
-.logme-optionout{
+.exercise-optionout{
   border-radius: 25px;
   border: 2px solid #008900;
   background: #008900;
