add template to modal;

--- a/protected/modules/exercise/assets/angular/views/exerciseTemplate.html
+++ b/protected/modules/exercise/assets/angular/views/exerciseTemplate.html
@@ -1,7 +1,6 @@
-<div class="exercise-container" data-ng-repeat="statRow in selectedStats | filter:userFilter | orderBy: 'date':true">
+<div class="exercise-container" data-ng-repeat="statRow in selectedStats | filter:userFilter">
   <div class="exercise-icon" ng-click="open(statRow)">
-    <div class="exercise-name">{{statRow.name}}</div>
-    <div class="exercise-name">{{statRow.url}}</div>
+    <div class="exercise-name">{{statRow.name || statRow.url}}</div>
     
   </div>
 </div>
