--- a/protected/modules/exercise/assets/css/main.css
+++ b/protected/modules/exercise/assets/css/main.css
@@ -47,12 +47,12 @@
 .exercise-icon{
   color:#fff;
   border-radius: 25px;
-  border: 2px solid #898989;
-  background: #898989;
-  background: -webkit-radial-gradient(#ededed 45%, #898989 100%);
-  background: -o-radial-gradient(#ededed 45%, #898989 100%); /* For Opera 11.6-12.0 */
-  background: -moz-radial-gradient(#ededed 45%, #898989 100%); /* For Firefox 3.6-15 */
-  background: radial-gradient(#ededed 20%, #898989 80%); /* Standard syntax */
+  border: 2px solid #7b9dea;
+  background: #7b9dea;
+  background: -webkit-radial-gradient(#89abf7 45%, #6692f5 100%);
+  background: -o-radial-gradient(#89abf7 45%, #6692f5 100%); /* For Opera 11.6-12.0 */
+  background: -moz-radial-gradient(#89abf7 45%, #6692f5 100%); /* For Firefox 3.6-15 */
+  background: radial-gradient(#89abf7 20%, #6692f5 80%); /* Standard syntax */
 }
 
 .modal-content{
@@ -64,7 +64,7 @@
   padding: 8px 0px 2px 25px;
   border-bottom: 1px solid #e5e5e5;
   color: white;
-  background-color: #8D49A9;
+  background-color: #7b9dea;
   border-radius: 25px 25px 0 0;
 }
 
