--- a/protected/modules/exercise/assets/angular/views/modalTemplate.html
+++ b/protected/modules/exercise/assets/angular/views/modalTemplate.html
@@ -1,12 +1,7 @@
 <div class="modal-header">
-            <h3 class="modal-title">Select your Option</h3>
-        </div>
-        <div class="modal-body">
-
-          <button class="btn logme-btn status-button logme-optionout" type="button" ng-disabled="logged || waiting" ng-click="selectOption('in')">Login</button>
-          <button class="btn logme-btn status-button logme-optionin"type="button" ng-disabled="notlogged || waiting" ng-click="selectOption('out')">Logout</button>
-        </div>
-        <div class="modal-footer">
-          <div class="status-label">{{status_message}}</div>
-          <button class="btn logme-btn logme-cancel" type="button" ng-click="cancel()">Cancel</button>
-        </div>
+            <h3 class="modal-title">Details</h3>
+</div>
+<div class="modal-body" ng-bind-html="statsContent"></div>
+<div class="modal-footer">
+          <button class="btn logme-btn logme-cancel" type="button" ng-click="cancel()">Close</button>
+</div>
